Sat Jul 27 17:27:34 2002  Priyanka Gontla  <pgontla@ece.uci.edu>

	* orbsvcs/examples/ORT/Gateway_ObjRef_Factory.h: 
	* orbsvcs/examples/ORT/Gateway_ObjRef_Factory.cpp: 
	  Fixed the throw_specs.
	
Sat Jul 27 07:38:32 CDT 2002 Pradeep Gore <pradeep@oomworks.com>

	* docs/releasenotes/index.html:
	  Updated with a note announcing start of work Real-Time Notification.


Sat Jul 27 20:11:58 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* orbsvcs/tests/AVStreams/Bidirectional_Flows/sender.cpp:
	  Exception macros fix.

Sat Jul 27 19:38:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO-INSTALL.html:
          Added BCB4 and BCB6 to supported platforms.

Fri Jul 26 21:07:03 2002  Ossama Othman  <ossama@uci.edu>

	* tao/Profile.cpp (policies):

	  Verify that the Messaging::TAG_POLICIES tagged component was
	  successfully extracted from the CDR stream before continuing.

	* tao/MProfile.i (~TAO_MProfile):

	  Added missing emulated exception argument to Policy::destroy()
	  call.  Removes unnecessary TSS accesses in emulated exception
	  builds.

	* tao/DynamicInterface/Server_Request.cpp (arguments, set_result):
	* tao/PortableServer/POA.cpp (activate_object_with_id_i):

	  Logically "ORed" BAD_INV_ORDER minor code with TAO_OMG_VMCID.
	  Standard OMG exception minor codes must be logically "ORed" with
	  the OMG VMCID constant.

Fri Jul 26 17:07:01 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Profile.cpp (decode):

	  Verify that the SSLIOP::TAG_SSL_SEC_TRANS tagged component was
	  successfully extracted from the CDR stream before continuing.

Fri Jul 26 18:32:45 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	Merged from branch allocators_lanes. This merge basically moves
	some of the allocators that are global in nature to lanes. This
	help RTCORBA use cases. Details of the changes are explained
	below.

	Thu Jul 25 07:17:02 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tao/ORB_Core.h:
	* tao/ORB_Core.cpp: