@@ -1,3 +1,7 @@
+Sun Jul 28 08:13:59 2002  Balachandran Natarajan  <bala@cs.wustl.edu>
+
+	* orbsvcs/tests/Mcast/Miop/Makefile: Updated dependencies.
+
 Sat Jul 27 17:27:34 2002  Priyanka Gontla  <pgontla@ece.uci.edu>
 
 	* orbsvcs/examples/ORT/Gateway_ObjRef_Factory.h: 
